deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-services-demo
  labels:
    helm.sh/chart: quickstart-java-service-0.2.0
    app.kubernetes.io/name: quickstart-java-service
    app.kubernetes.io/instance: quickstart-java-service
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    konveyor.io/archetype: "Java"
  annotations:
    konveyor.io/source-repository: https://github.com/rromannissen/rhoar-microservices-demo.git
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: quickstart-java-service
      app.kubernetes.io/instance: quickstart-java-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app.kubernetes.io/name: quickstart-java-service
        app.kubernetes.io/instance: quickstart-java-service
    spec:
      serviceAccountName: micro-services-demo
      terminationGracePeriodSeconds: 60
      containers:
        - name: quickstart-java-service
          image: ":1.0.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /actuator/health
              port: http
            failureThreshold: 30
            periodSeconds: 2
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
