service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-services-demo
  labels:
    helm.sh/chart: quickstart-java-service-0.2.0
    app.kubernetes.io/name: quickstart-java-service
    app.kubernetes.io/instance: quickstart-java-service
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    konveyor.io/archetype: "Java"
  annotations:
    konveyor.io/source-repository: https://github.com/rromannissen/rhoar-microservices-demo.git
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: quickstart-java-service
    app.kubernetes.io/instance: quickstart-java-service
